# MetaBridge

./: package-lock.json  package.json
backend/: README.md  pyproject.toml
backend/app/: crud.py  db.py  main.py  models.py  schemas.py
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: EntityTable.js
frontend/src/pages/: AdminPage.js  CatalogsPage.js  CategoriesPage.js  ContextsPage.js  OnboardingPage.js  RolesPage.js  SystemsPage.js
